// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickStatus component should render correctly with data 1`] = `
<div
  className="quick-status"
>
  <ul
    className="quick-status__items"
  >
    <li
      className="quick-status__link-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__link-picto","color":"green","icon":"faPlugCircleBolt"}
      </div>
    </li>
    <li
      className="quick-status__supply-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__supply-picto","color":"green","icon":"faLeaf"}
      </div>
    </li>
    <li
      className="quick-status__fare-period-item"
    >
      <span
        text="base"
      >
        Badge atom component
      </span>
    </li>
  </ul>
</div>
`;

exports[`QuickStatus component should render correctly with data and power overuse of 2A 1`] = `
<div
  className="quick-status"
>
  <ul
    className="quick-status__items"
  >
    <li
      className="quick-status__link-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__link-picto","color":"green","icon":"faPlugCircleBolt"}
      </div>
    </li>
    <li
      className="quick-status__supply-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__supply-picto supply-critical","color":"red","icon":"faBoltLightning"}
      </div>
    </li>
    <li
      className="quick-status__fare-period-item"
    >
      <span
        text="base"
      >
        Badge atom component
      </span>
    </li>
  </ul>
</div>
`;

exports[`QuickStatus component should render correctly with data: no teleinfo data after more than 10 seconds 1`] = `
<div
  className="quick-status"
>
  <ul
    className="quick-status__items"
  >
    <li
      className="quick-status__link-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__link-picto","color":"orange","icon":"faPlugCircleExclamation"}
      </div>
    </li>
    <li
      className="quick-status__supply-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__supply-picto","color":"green","icon":"faLeaf"}
      </div>
    </li>
    <li
      className="quick-status__fare-period-item"
    >
      <span
        text="base"
      >
        Badge atom component
      </span>
    </li>
  </ul>
</div>
`;

exports[`QuickStatus component should render correctly without data: no teleinfo data after more than 30 seconds 1`] = `
<div
  className="quick-status"
>
  <ul
    className="quick-status__items"
  >
    <li
      className="quick-status__link-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__link-picto","color":"red","icon":"faPlugCircleExclamation"}
      </div>
    </li>
    <li
      className="quick-status__supply-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__supply-picto","color":"white","icon":"faCircleQuestion"}
      </div>
    </li>
    <li
      className="quick-status__fare-period-item"
    >
      <div>
        FontAwesomeIcon component 
        {"className":"quick-status__current-fare-period-picto","color":"white","icon":"faCircleQuestion"}
      </div>
    </li>
  </ul>
</div>
`;
